--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A lovely minigame :></title>
+    <title>A gameshow :></title>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/spinload.css">
