--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A gameshow :></title>
+    <title>A lovely minigame :></title>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/spinload.css">
@@ -45,12 +45,12 @@
       <source src="./sound/sound.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
-    <video id="stage1" class="video-background" style="display: none;" muted controlsList="nodownload">
+    <video id="stage1" class="video-background" style="display: none;" muted controls="false">
       <source src="stage1.mp4" type="video/mp4">
       Your browser does not support the video tag.
   </video>
 
-  <video id="stage2" class="video-background" loop style="display: none;" muted controlsList="nodownload">
+  <video id="stage2" class="video-background" loop style="display: none;" muted controls="false">
       <source src="stage2.mp4" type="video/mp4">
       Your browser does not support the video tag.
   </video>
