--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
       <source src="./sound/sound.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
-    <video id="stage1" class="video-background" style="display: none;" muted controls="false">
+    <video id="stage1" class="video-background" style="display: none;" muted>
       <source src="stage1.mp4" type="video/mp4">
       Your browser does not support the video tag.
   </video>
 
-  <video id="stage2" class="video-background" loop style="display: none;" muted controls="false">
+  <video id="stage2" class="video-background" loop style="display: none;" muted>
       <source src="stage2.mp4" type="video/mp4">
       Your browser does not support the video tag.
   </video>
